feat: upgrade to Spring Boot 3 / Java 21 with Docker deployment, smart sync, and retry
Major upgrade from Spring Boot 2 / Java 11 to Spring Boot 3.4 / Java 21 with virtual threads.
Adds Docker Compose stack (Nexus + Ofelia scheduler), pipeline mode with concurrent
scrape/publish via BlockingQueue, smart sync (HEAD-check skip), configurable retry with
exponential backoff, and publisher size verification.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>